# gogh

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/gogh/: bitmap.hpp  context.hpp  cpu_register.hpp  decoder.hpp  disassembler.hpp  gogh.hpp  instruction.hpp  memory.hpp  stab.hpp  tagmap.hpp
include/gogh/arch/mips/: context.hpp  cpu_register.hpp  decoder.hpp  instruction_i.hpp  instruction_j.hpp  instruction_r.hpp
include/gogh/helpers/: debug.hpp  loader.hpp
src/ear/: ear.c
src/gogh/: gogh.cpp
src/gogh/arch/mips/: decoder.cpp
